2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/m32rsim.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/m32rsim.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-04-28	Chris Johns <chrisj@rtems.org>

	* start/start.S: Update for boot_card command line change.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* .cvsignore, ChangeLog, Makefile.am, bsp_specs, configure.ac,
	preinstall.am, console/console-io.c, console/syscalls.S,
	console/trap0.S, include/.cvsignore, include/bsp.h, include/tm27.h,
	start/start.S, startup/linkcmds: New files.

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cleanup ../../shared/include/bootcard.h handling.

2008-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* console/console-io.c: Add missing file and remove junk code.
	* console/syscalls.S: New file.

2008-09-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/linkcmds: Simulator now appears to have 16M RAM support by
	default in gdb 6.8.

2008-09-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, console/console-io.c, include/bsp.h:

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Make letting boot_card() handle work area allocation
	mandatory. Rename RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to
	BSP_BOOTCARD_OPTIONS.
