@@ -4,11 +4,6 @@
  *  $Id$
  */
 
-#warning Call to boot_card has changed and needs checking.
-#warning The call is "void boot_card(const char* cmdline);"
-#warning You need to pass a NULL.
-#warning Please check and remove these warnings.
-
 	.text
 	.balign 4
 	.global	_start
@@ -54,6 +49,8 @@ _start:
 
 # Call main, then exit.
 
+	ldi	r1, #0           ; r1 = argv
+	ldi	r0, #0           ; r0 = argc
 	bl	boot_card
 	bl	sys_exit
 
